clusters/home/media/app/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: autobrr
  name: autobrr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
        - image: ghcr.io/autobrr/autobrr:latest
          imagePullPolicy: Always
          name: autobrr
          volumeMounts:
            - name: autobrr-config
              mountPath: /config
      volumes:
        - name: autobrr-config
          persistentVolumeClaim:
            claimName: autobrr-config
