clusters/home/media/app/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: autobrr
  name: autobrr
spec:
  selector:
    app: autobrr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 7474
