clusters/home/media/app/autobrr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
spec:
  parentRefs:
    - name: gw-media
  hostnames:
    - autobrr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: autobrr
          port: 80
